[gd_scene load_steps=6 format=2]

[ext_resource path="res://Juegos/UI/MiniMapa/fondo.png" type="Texture" id=1]
[ext_resource path="res://Juegos/UI/MiniMapa/Iconos/player.png" type="Texture" id=2]
[ext_resource path="res://Juegos/UI/MiniMapa/MiniMapa.gd" type="Script" id=3]
[ext_resource path="res://Juegos/UI/MiniMapa/Iconos/estacion_recarga.png" type="Texture" id=4]
[ext_resource path="res://Juegos/UI/MiniMapa/Iconos/base_enemiga_C.png" type="Texture" id=5]

[node name="MiniMapa" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -68.0
margin_top = -199.0
margin_right = 250.0
margin_bottom = -23.0
rect_min_size = Vector2( 144, 81 )
script = ExtResource( 3 )

[node name="CuadroMiniMapa" type="NinePatchRect" parent="."]
margin_right = 318.0
margin_bottom = 176.0
rect_min_size = Vector2( 318, 176 )
texture = ExtResource( 1 )

[node name="ContenedorIconos" type="MarginContainer" parent="CuadroMiniMapa"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ZonaRenderizadoMiniMapa" type="TextureRect" parent="CuadroMiniMapa/ContenedorIconos"]
margin_right = 318.0
margin_bottom = 176.0

[node name="IconoPlayer" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
position = Vector2( 54.0001, 51 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="IconoBaseEnemiga" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
visible = false
modulate = Color( 1, 0.105882, 0.0117647, 1 )
position = Vector2( 103, 98 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="IconoEstacion" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
visible = false
modulate = Color( 0.682353, 0.0627451, 0.960784, 1 )
position = Vector2( 242, 79 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
